Use flex to ensure alignment of the warning icon and message

--- a/res/css/views/settings/tabs/room/_SecurityRoomSettingsTab.scss
+++ b/res/css/views/settings/tabs/room/_SecurityRoomSettingsTab.scss
@@ -18,16 +18,11 @@ limitations under the License.
     .mx_SettingsTab_showAdvanced {
         margin-bottom: $spacing-16;
     }
-}
 
-.mx_SecurityRoomSettingsTab_warning {
-    display: block;
-
-    img {
-        vertical-align: middle;
-        margin-right: 5px;
-        margin-left: 3px;
-        margin-bottom: 5px;
+    .mx_SecurityRoomSettingsTab_warning {
+        display: flex;
+        align-items: center;
+        column-gap: $spacing-4;
     }
 }
 
